@@ -33,7 +33,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import javax.inject.Inject;
 import javax.inject.Named;
@@ -435,7 +434,7 @@ public class SolrEventStore extends AbstractAsynchronousEventStore
         SolrQuery solrQuery = new SolrQuery();
 
         solrQuery.addFilterQuery(serializeInCondition(EventsSolrCoreInitializer.SOLR_FIELD_ID,
-            events.stream().map(Event::getId).collect(Collectors.toList())));
+            events.stream().map(Event::getId).toList()));
 
         solrQuery.addFilterQuery(serializeInCondition(EventsSolrCoreInitializer.SOLR_FIELD_READLISTENERS, entityIds)
             + SOLR_OR + serializeInCondition(EventsSolrCoreInitializer.SOLR_FIELD_UNREADLISTENERS, entityIds));
@@ -519,19 +518,17 @@ public class SolrEventStore extends AbstractAsynchronousEventStore
             fields.forEach(solrQuery::setFields);
         }
 
-        if (query instanceof PageableEventQuery) {
-            applyPageable(solrQuery, (PageableEventQuery) query);
+        if (query instanceof PageableEventQuery pageableQuery) {
+            applyPageable(solrQuery, pageableQuery);
         }
 
-        if (query instanceof SortableEventQuery) {
-            for (SortClause sort : ((SortableEventQuery) query).getSorts()) {
+        if (query instanceof SortableEventQuery sortableQuery) {
+            for (SortClause sort : sortableQuery.getSorts()) {
                 solrQuery.addSort(toSolrFieldName(sort), sort.getOrder() == Order.ASC ? ORDER.asc : ORDER.desc);
             }
         }
 
-        if (query instanceof SimpleEventQuery) {
-            SimpleEventQuery simpleQuery = (SimpleEventQuery) query;
-
+        if (query instanceof SimpleEventQuery simpleQuery) {
             addConditions(simpleQuery.isOr() && simpleQuery.getConditions().size() > 1
                 ? Collections.singletonList(simpleQuery) : simpleQuery.getConditions(), solrQuery);
         }
@@ -572,16 +569,16 @@ public class SolrEventStore extends AbstractAsynchronousEventStore
     {
         String conditionString;
 
-        if (condition instanceof CompareQueryCondition) {
-            conditionString = serializeCompareCondition((CompareQueryCondition) condition);
-        } else if (condition instanceof StatusQueryCondition) {
-            conditionString = serializeStatusCondition((StatusQueryCondition) condition);
-        } else if (condition instanceof MailEntityQueryCondition) {
-            conditionString = serializeMailCondition((MailEntityQueryCondition) condition);
-        } else if (condition instanceof InQueryCondition) {
-            conditionString = serializeInCondition((InQueryCondition) condition);
-        } else if (condition instanceof GroupQueryCondition) {
-            conditionString = serializeGroupCondition((GroupQueryCondition) condition);
+        if (condition instanceof CompareQueryCondition compareCondition) {
+            conditionString = serializeCompareCondition(compareCondition);
+        } else if (condition instanceof StatusQueryCondition statusCondition) {
+            conditionString = serializeStatusCondition(statusCondition);
+        } else if (condition instanceof MailEntityQueryCondition mailCondition) {
+            conditionString = serializeMailCondition(mailCondition);
+        } else if (condition instanceof InQueryCondition inCondition) {
+            conditionString = serializeInCondition(inCondition);
+        } else if (condition instanceof GroupQueryCondition groupCondition) {
+            conditionString = serializeGroupCondition(groupCondition);
         } else {
             conditionString = null;
         }
@@ -731,10 +728,10 @@ public class SolrEventStore extends AbstractAsynchronousEventStore
     private Type resolveCustomType(AbstractPropertyQueryCondition condition)
     {
         Object value = null;
-        if (condition instanceof CompareQueryCondition) {
-            value = ((CompareQueryCondition) condition).getValue();
-        } else if (condition instanceof InQueryCondition) {
-            List<Object> values = ((InQueryCondition) condition).getValues();
+        if (condition instanceof CompareQueryCondition compareCondition) {
+            value = compareCondition.getValue();
+        } else if (condition instanceof InQueryCondition inCondition) {
+            List<Object> values = inCondition.getValues();
             if (values != null && !values.isEmpty()) {
                 value = values.getFirst();
             }
