@@ -22,7 +22,6 @@ package org.xwiki.messagestream.internal;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import javax.inject.Inject;
 import javax.inject.Singleton;
@@ -189,9 +188,10 @@ public class DefaultMessageStream implements MessageStream
             SimpleEventQuery query = createEventQuery(PersonalMessageDescriptor.EVENT_TYPE, limit, offset);
             query.eq(Event.FIELD_USER, author);
 
-            result = this.eventStore.search(query).stream().collect(Collectors.toList());
+            result = this.eventStore.search(query).stream().toList();
         } catch (EventStreamException ex) {
-            this.logger.warn("Failed to search personal messages: {}", ex.getMessage());
+            this.logger.warn("Failed to search personal messages. Root cause is [{}]",
+                ExceptionUtils.getRootCauseMessage(ex));
         }
         return result;
     }
@@ -210,9 +210,10 @@ public class DefaultMessageStream implements MessageStream
             SimpleEventQuery query = createEventQuery(DirectMessageDescriptor.EVENT_TYPE, limit, offset);
             query.eq(Event.FIELD_STREAM, this.bridge.getCurrentUserReference());
 
-            result = this.eventStore.search(query).stream().collect(Collectors.toList());
+            result = this.eventStore.search(query).stream().toList();
         } catch (EventStreamException ex) {
-            this.logger.warn("Failed to search direct messages: {}", ex.getMessage());
+            this.logger.warn("Failed to search direct messages. Root cause is [{}]",
+                ExceptionUtils.getRootCauseMessage(ex));
         }
         return result;
     }
@@ -231,9 +232,10 @@ public class DefaultMessageStream implements MessageStream
             SimpleEventQuery query = createEventQuery(GroupMessageDescriptor.EVENT_TYPE, limit, offset);
             query.eq(Event.FIELD_STREAM, group);
 
-            result = this.eventStore.search(query).stream().collect(Collectors.toList());
+            result = this.eventStore.search(query).stream().toList();
         } catch (EventStreamException ex) {
-            this.logger.warn("Failed to search group messages: {}", ex.getMessage());
+            this.logger.warn("Failed to search group messages. Root cause is [{}]",
+                ExceptionUtils.getRootCauseMessage(ex));
         }
         return result;
     }
@@ -252,7 +254,7 @@ public class DefaultMessageStream implements MessageStream
                 throw new IllegalArgumentException("You are not authorized to delete this message");
             }
         } catch (Exception e) {
-            this.logger.warn("Failed to delete message: {}", ExceptionUtils.getRootCauseMessage(e));
+            this.logger.warn("Failed to delete message. Root cause is [{}]", ExceptionUtils.getRootCauseMessage(e));
         }
     }
 
